wordpress/wordpress-deployment.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  creationTimestamp: null
  generation: 1
  labels:
    app: wordpress
    app.kubernetes.io/component: wordpress
    app.kubernetes.io/instance: wordpress
  name: wordpress
  selfLink: /apis/apps.openshift.io/v1/namespaces/burndown/deploymentconfigs/wordpress
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    deploymentconfig: wordpress
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: null
      labels:
        deploymentconfig: wordpress
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/burndown/wordpress@sha256:ac9de9430616f10fff8fda301abad84d26f2db446ddf94de0916900f5da12b2d
        imagePullPolicy: Always
        name: wordpress
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - wordpress
      from:
        kind: ImageStreamTag
        name: wordpress:latest
        namespace: burndown
    type: ImageChange
status:
  availableReplicas: 0
  latestVersion: 0
  observedGeneration: 0
  replicas: 0
  unavailableReplicas: 0
  updatedReplicas: 0
