wordpress/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
    template.openshift.io/expose-uri: mysql://{.spec.clusterIP}:{.spec.ports[?(.name=="mysql")].port}
  creationTimestamp: null
  labels:
    app: mysql-persistent
    app.kubernetes.io/component: mysql-persistent
    app.kubernetes.io/instance: mysql-persistent
    template: mysql-persistent-template
  name: mysql
  selfLink: /api/v1/namespaces/burndown/services/mysql
spec:
  ports:
  - name: mysql
    port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    name: mysql
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
