wordpress/wordpress-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  name: wordpress
  selfLink: /apis/route.openshift.io/v1/namespaces/burndown/routes/wordpress
spec:
  host: wordpress.demo-sysdeseng.com
  port:
    targetPort: 8080
  to:
    kind: Service
    name: wordpress
    weight: 100
  wildcardPolicy: None
status:
  ingress: null
